--- a/index.html
+++ b/index.html
@@ -16,22 +16,28 @@
 <body>
     <div class="app">
         <header class="header">
-            <nav class="navbar">
-                <ul class="navbar__left">
-                    <li class="navbar__left--item">Trang chủ Shopee</li>
-                    <li class="navbar__left--item">Trở thành Người bán Shopee</li>
-                    <li class="navbar__left--item">Tải ứng dụng</li>
-                    <li class="navbar__left--item">Kết nối <a href="#" class="ti-facebook"></a><a href="#" class="ti-instagram"></a></li>
-                </ul>
-                <ul class="navbar__right">
-                    <li class="navbar__right--item"><a href="" class="ti-bell"></a> Thông báo</li>
-                    <li class="navbar__right--item"><a href="" class="ti-help-alt"></a> Hỗ trợ</li>
-                    <li class="navbar__right--item"><a href="" class="ti-world"></a> Tiếng Việt <a href="" class="ti-angle-down"></a></li>
-                    <li class="navbar__right--item">Đăng ký</li>
-                    <li class="navbar__right--item">Đăng nhập</li>
-                </ul>
+            <div class="grid">
 
-            </nav>
+                <nav class="navbar">
+                    <ul class="navbar__left">
+                        <li class="navbar__left--item">Kênh Người Bán</li>
+                        <li class="navbar__left--item">Trở thành Người bán Shopee</li>
+                        <li class="navbar__left--item">Tải ứng dụng</li>
+                        <li class="navbar__left--item">Kết nối <a href="#" class="navbar__left--item-link ti-facebook"></a><a href="#" class="ti-instagram"></a></li>
+                    </ul>
+                    <ul class="navbar__right">
+                        <li class="navbar__right--item"><a href="" class="navbar__right--item-link ti-bell"> Thông báo</a></li>
+                        <li class="navbar__right--item"><a href="" class="navbar__right--item-link ti-help-alt"> Hỗ trợ</a></li>
+                        <li class="navbar__right--item">
+                            <a href="" class="navbar__right--item-link ti-world"></a> Tiếng Việt 
+                            <a href="" class="navbar__right--item-link ti-angle-down"></a>
+                        </li>
+                        <li class="navbar__right--item">Đăng ký</li>
+                        <li class="navbar__right--item">Đăng nhập</li>
+                    </ul>
+    
+                </nav>
+            </div>
 
         </header>
         <div class="container">
