--- a/index.html
+++ b/index.html
@@ -20,20 +20,24 @@
 
                 <nav class="navbar">
                     <ul class="navbar__left">
-                        <li class="navbar__left--item">Kênh Người Bán</li>
-                        <li class="navbar__left--item">Trở thành Người bán Shopee</li>
-                        <li class="navbar__left--item">Tải ứng dụng</li>
-                        <li class="navbar__left--item">Kết nối <a href="#" class="navbar__left--item-link ti-facebook"></a><a href="#" class="ti-instagram"></a></li>
+                        <li class="navbar__left--item navbar__left--item--separate">Kênh Người Bán</li>
+                        <li class="navbar__left--item navbar__left--item--separate">Trở thành Người bán Shopee</li>
+                        <li class="navbar__left--item navbar__left--item--separate">Tải ứng dụng</li>
+                        <li class="navbar__left--item">Kết nối 
+                            <a href="#" class="navbar__left--item-link ti-facebook"></a>
+                            <a href="#" class="navbar__left--item-link ti-instagram"></a></li>
                     </ul>
                     <ul class="navbar__right">
-                        <li class="navbar__right--item"><a href="" class="navbar__right--item-link ti-bell"> Thông báo</a></li>
-                        <li class="navbar__right--item"><a href="" class="navbar__right--item-link ti-help-alt"> Hỗ trợ</a></li>
+                        <li class="navbar__right--item">
+                            <a href="" class="navbar__right--item-link ti-bell"> Thông Báo</a></li>
+                        <li class="navbar__right--item">
+                            <a href="" class="navbar__right--item-link ti-help-alt"> Hỗ Trợ</a></li>
                         <li class="navbar__right--item">
                             <a href="" class="navbar__right--item-link ti-world"></a> Tiếng Việt 
                             <a href="" class="navbar__right--item-link ti-angle-down"></a>
                         </li>
-                        <li class="navbar__right--item">Đăng ký</li>
-                        <li class="navbar__right--item">Đăng nhập</li>
+                        <li class="navbar__right--item navbar__right--item--strong navbar__right--item--separate">Đăng ký</li>
+                        <li class="navbar__right--item navbar__right--item--strong">Đăng nhập</li>
                     </ul>
     
                 </nav>
