--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                         <li class="navbar__left--item navbar__left--item--separate">Trở thành Người bán Shopee</li>
                         <li class="navbar__left--item navbar__left--item--show-qr navbar__left--item--separate">
                             Tải ứng dụng
+                            <!--QR code -->
                             <div class="navbar__qrcode">
                                 <img src="/img/scan.png" alt="scancode" class="navbar__qrcode-img">
                                 <div class="navbar__qrcode--app">
@@ -33,8 +34,6 @@
                                     <a href="" class="navbar__qrcode--link">
                                         <img src="/img/apple-app.png" alt="Apple" class="navbar__qrcode--download-img">
                                     </a>
-                                    
-                                   
                                 </div>
                             </div>
 
@@ -44,9 +43,44 @@
                             <a href="#" class="navbar__left--item-link"><i class="ti-facebook"></i></a>
                             <a href="#" class="navbar__left--item-link"><i class="ti-instagram"></i></a></li>
                     </ul>
+
                     <ul class="navbar__right">
-                        <li class="navbar__right--item">
-                            <a href="" class="navbar__right--item-link"> <i class="ti-bell"></i> Thông Báo</a></li>
+                        <li class="navbar__right--item navbar__right--item-show-notification">
+                            <a href="" class="navbar__right--item-link">
+                                 <i class="ti-bell"></i> Thông Báo</a>
+                             <!--Header notification -Thông báo-->
+                            <div class="navbar__notification">
+                                <header class="navbar__notification-header">
+                                    <h3>Thông Báo Mới Nhận</h3>
+                                </header>
+                                <ul class="navbar__notification-list">
+                                    <li class="navbar__notification-item">
+                                        <a href="" class="navbar__notification-link">
+                                            <img src="/img/9.jpg" alt="" class="navbar__notification-img">
+                                            <div class="navbar__notification-info">
+                                                <span class="navbar__notification-name">Bạn ơi, hoàn xu</span>
+                                                <span class="navbar__notification-descriotion">
+                                                    Chiếc voucher. Số lượng có hạn dùng ngay bạn nhé!</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="navbar__notification-item">
+                                        <a href="" class="navbar__notification-link">
+                                            <img src="/img/2.jpg" alt="" class="navbar__notification-img">
+                                            <div class="navbar__notification-info">
+                                                <span class="navbar__notification-name">Deal độc quyền + Freeship</span>
+                                                <span class="navbar__notification-descriotion">
+                                                    Xì xì may mắn đến 88%, chớp deal lộc phát</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <div class="navbar__notification-footer">
+                                    <a href="" class="navbar__notification-footer-btn">Xem tất cả</a>
+                                </div>
+
+                            </div>
+                        </li>
                         <li class="navbar__right--item">
                             <a href="" class="navbar__right--item-link"><i class="ti-help-alt"></i> Hỗ Trợ</a></li>
                         <li class="navbar__right--item">
