--- a/index.html
+++ b/index.html
@@ -83,9 +83,25 @@
                         </li>
                         <li class="navbar__right--item">
                             <a href="" class="navbar__right--item-link"><i class="ti-help-alt"></i> Hỗ Trợ</a></li>
-                        <li class="navbar__right--item">
+                        <li class="navbar__right--item navbar__right--item-show-language">
                             <a href="" class="navbar__right--item-link"><i class="ti-world"></i></a> Tiếng Việt 
                             <a href="" class="navbar__right--item-link"><i class="ti-angle-down"></i></a>
+                             <!--Header language - Ngôn ngữ-->
+                             <div class="navbar__language">
+                                 <ul class="navbar__language-list">
+                                     <li class="navbar__language-item">
+                                         <a href="" class="navbar__language-link">
+                                             <span class="navbar__language-name">Tiếng Việt</span>
+                                         </a>
+                                     </li>
+                                     <li class="navbar__language-item">
+                                        <a href="" class="navbar__language-link">
+                                            <span class="navbar__language-name">English</span>
+                                        </a>
+                                    </li>
+                                 </ul>
+                             </div>
+                            
                         </li>
                         <li class="navbar__right--item navbar__right--item--strong navbar__right--item--separate">Đăng ký</li>
                         <li class="navbar__right--item navbar__right--item--strong">Đăng nhập</li>
