--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="authecation-form">
                 <div class="authecation-form__header">
                     <h3 class="authecation-form__register">Đăng ký</h3>
-                    <span class="authecation-form__swith-btn">Đăng nhập</span>
+                    <span class="authecation-form__swith-btn js-call-modal-login">Đăng nhập</span>
                 </div>
                 <div class="authecation-form__info">
                     <div class="authecation-form__group">
@@ -183,7 +183,7 @@
                 <div class="authecation-form authecation-form-login">
                     <div class="authecation-form__header">
                         <h3 class="authecation-form__register">Đăng nhập</h3>
-                        <span class="authecation-form__swith-btn">Đăng ký</span>
+                        <span class="authecation-form__swith-btn js-call-modal-register">Đăng ký</span>
                     </div>
                     <div class="authecation-form__info">
                         <div class="authecation-form__group">
