--- a/index.html
+++ b/index.html
@@ -125,7 +125,25 @@
                         </svg>
                     </div>
                     <div class="search__main">
-                        <input type="text" class="search__main-input" placeholder="SĂN QUÀ CHÍNH HÃNG">
+                        <div class="search__main-input-wrap">
+                            <input type="text" class="search__main-input" placeholder="SĂN QUÀ CHÍNH HÃNG">
+                            <!--Search history-->
+                            <div class="search__main-history">
+                                <div class="search__main-history-header">
+                                    <h4 class="search__main-history-title">SĂN QUÀ CHÍNH HÃNG </h4>
+                                    <img src="/img/search.png" alt="" class="search__main-history-img">
+                                </div>
+                                
+                                <ul class="search__main-history-list">
+                                    <li class="search__main-history-item">
+                                        <a href="" class="">Bình siêu tốc</a>
+                                    </li>
+                                    <li class="search__main-history-item">
+                                        <a href="" class="">Loa JBL</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                         <button class="search__main-btn">
                             <i class="search__main-btn-icon ti-search"></i>
                         </button>
