--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@
                     <div class="search__cart">
                         <div class="search__cart-wrap">
                             <i class="search__cart-icon ti-shopping-cart"></i>
+                            <span class="search__cart-notice">6</span>
+                            <!-- Css no-cart: search__cart-list--no-cart -->
                             <div class="search__cart-list search__cart-list--no-cart">
                                 <img src="/img/no-cart.png" alt="" class="search__cart-no-cart-img">
                                 <p class="search__cart-list-no-cart-message">Chưa Có Sản Phẩm</p>
