--- a/index.html
+++ b/index.html
@@ -104,10 +104,26 @@
                              </div>
                             
                         </li>
+                        <!--
                         <li id="js-register"
                         class="js-register navbar__right--item navbar__right--item--strong navbar__right--item--separate" >Đăng ký</li>
                         <li 
-                        class="js-login navbar__right--item navbar__right--item--strong">Đăng nhập</li>
+                        class="js-login navbar__right--item navbar__right--item--strong">Đăng nhập
+                        </li>
+                        -->
+                        <li class="navbar__right--item navbar__right-user">
+                            <img src="/img/avarta1.jpg" alt="" class="navbar__right-user-avarta">
+                            <span class="navbar__right-user-name">Giang Phan</span>
+
+                            <ul class="navbar__right-user-menu">
+                                <li class="navbar__right-user-menu-item">
+                                    <a href="" class="">Tài Khoản Của Tôi</a></li>
+                                <li class="navbar__right-user-menu-item">
+                                    <a href="" class="">Đơn Mua</a></li>
+                                <li class="navbar__right-user-menu-item">
+                                    <a href="" class="">Đăng Xuất</a></li>
+                            </ul>
+                        </li>
                     </ul>
     
                 </nav>
