--- a/index.html
+++ b/index.html
@@ -247,17 +247,25 @@
                 <div class="grid__row">
                     <div class="grid__column-8">
                         <div class="navbar__slider-main">
-                            A
+                            <img class="navbar__slider-main-img" 
+                            src="/img/slider/omo.png" alt="">
 
                         </div>
                     </div>
                     <div class="grid__column-4">
                         <div class="navbar__slider-add">
-                            B
+                            <div class="navbar__slider-add-top">
+                                <img src="/img/slider/slider-right.png" alt="" class="navbar__slider-add-top-img">
+                            </div>
+                            <div class="navbar__slider-add-top">
+                                <img src="/img/slider/slider-right 2.png" alt="" class="navbar__slider-add-top-img">
+                            </div>
+                            
 
                         </div>
                     </div>
                 </div>
+
             </div>
 
         </div>
