--- a/index.html
+++ b/index.html
@@ -269,6 +269,99 @@
             </div>
 
         </div>
+
+        <div class="navbar-application">
+            <div class="grid">
+                <div class="grid__row">
+                    <div class="navbar-application-tech-zone">
+                        <a href="" class="navbar-application-tech-zone-link">
+                            <img src="/img/menu-application/techZone.png" alt="" class="navbar-application-tech-zone-img">
+                            <div class="navbar-application-tech-zone-title">
+                                Tech Zone - Siêu Thị Điện Tử
+                            </div>
+                        </a>
+                    </div> 
+
+                    <div class="navbar-application-tech-zone">
+                        <a href="" class="navbar-application-tech-zone-link">
+                            <img src="/img/menu-application/re.png" alt="" class="navbar-application-tech-zone-img">
+                            <div class="navbar-application-tech-zone-title">
+                                Gì Cũng Rẻ - Từ 1K
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="navbar-application-tech-zone">
+                        <a href="" class="navbar-application-tech-zone-link">
+                            <img src="/img/menu-application/Hoan-xu.png" alt="" class="navbar-application-tech-zone-img">
+                            <div class="navbar-application-tech-zone-title">
+                                Hoàn Xu 10% - Đơn Từ 0Đ
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="navbar-application-tech-zone">
+                        <a href="" class="navbar-application-tech-zone-link">
+                            <img src="/img/menu-application/Nap-the.png" alt="" class="navbar-application-tech-zone-img">
+                            <div class="navbar-application-tech-zone-title">
+                                Nạp Thẻ, Hóa Đơn & E-voucher
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="navbar-application-tech-zone">
+                        <a href="" class="navbar-application-tech-zone-link">
+                            <img src="/img/menu-application/freeship.png" alt="" class="navbar-application-tech-zone-img">
+                            <div class="navbar-application-tech-zone-title">
+                                Freeship Xtra
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="navbar-application-tech-zone">
+                        <a href="" class="navbar-application-tech-zone-link">
+                            <img src="/img/menu-application/Hanghieu.png" alt="" class="navbar-application-tech-zone-img">
+                            <div class="navbar-application-tech-zone-title">
+                                Hàng Hiệu -50%
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="navbar-application-tech-zone">
+                        <a href="" class="navbar-application-tech-zone-link">
+                            <img src="/img/menu-application/hangquocte.png" alt="" class="navbar-application-tech-zone-img">
+                            <div class="navbar-application-tech-zone-title">
+                                Hàng Quốc Tế - Deal x9K
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="navbar-application-tech-zone">
+                        <a href="" class="navbar-application-tech-zone-link">
+                            <img src="/img/menu-application/Shopeepremium.png" alt="" class="navbar-application-tech-zone-img">
+                            <div class="navbar-application-tech-zone-title">
+                                Shopee Premium
+                            </div>
+                        </a>
+                    </div>
+
+
+
+
+                </div>
+            </div>
+        </div>
+
+        <div class="navbar-banner-first">
+            <div class="grid">
+                <div class="grid__row">
+                    <div class="grid__column-12">
+                        <img src="/img/banner/banner1.jpg" alt="" class="navbar-banner-first-img">
+                    </div>
+
+                </div>
+            </div>
+        </div>
         <footer class="footer">
 
         </footer>
