--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             <div class="grid">
                 <div class="grid__row">
                     <div class="grid__column-12">
-                        <img src="/img/banner/banner1.jpg" alt="" class="navbar-banner-first-img">
+                        <img src="/img/Banner/banner1.jpg" alt="" class="navbar-banner-first-img">
                     </div>
 
                 </div>
