--- a/index.html
+++ b/index.html
@@ -377,6 +377,24 @@
                         <div class="special-brand__main">
                             <img src="/img/Better-produce/Better1.png" alt="" class="special-brand__main-img">
                         </div>
+
+                        <div class="special-brand__header">
+                            <div class="special-brand__header-left">
+                                <img src="/img/Better-produce/pink1.png" alt="" class="special-brand__header-left-img">
+                                <div class="grid__column-6">
+                                    <div class="special-producer__body">
+                                        <div class="special-producer__body-descriptor">SẢN PHẨM NỔI BẬT</div>
+                                        <div class="special-producer__body-descriptor-add">Xem Thêm</div>
+                                    </div>
+
+                                </div>
+
+
+                            </div>
+
+                        </div>
+
+
                         <div class="special-brand__wrap">
                             <div class="special-brand__produce">
                                 <div class="grid__column-6">
