--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                                 <img src="/img/Better-produce/pink1.png" alt="" class="special-brand__header-left-img">
                                 <div class="grid__column-6">
                                     <div class="special-producer__body">
-                                        <div class="special-producer__body-descriptor">SẢN PHẨM NỔI BẬT</div>
+                                        <div class="special-producer__body-descriptor">THÊM VÀO GIỎ NGAY</div>
                                         <div class="special-producer__body-descriptor-add">Xem Thêm</div>
                                     </div>
 
