header producer-brand

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             </div>
         </div>
 
-        <!--Navbar application-->
+        <!--Navbar brand and producer-->
 
         <div class="special-brand">
             <div class="grid">
@@ -379,18 +379,34 @@
                         </div>
 
                         <div class="special-brand__header">
-                            <div class="special-brand__header-left">
-                                <img src="/img/Better-produce/pink1.png" alt="" class="special-brand__header-left-img">
-                                <div class="grid__column-6">
-                                    <div class="special-producer__body">
-                                        <div class="special-producer__body-descriptor">THÊM VÀO GIỎ NGAY</div>
-                                        <div class="special-producer__body-descriptor-add">Xem Thêm</div>
-                                    </div>
+                            <img src="/img/Better-produce/pink1.png" alt="" class="special-brand__header-img">
+                        </div>
 
+                        <div class="brand-producer">
+                            <div class="grid__column-6">
+                                <div class="brand-producer__producer">
+                                    <div class="brand-producer__producer">
+                                        <div class="brand-producer__producer-title">THÊM VÀO GIỎ NGAY</div>
+                                        <a href="" class="brand-producer__producer-add">Xem Thêm
+                                            <i class="ti-angle-right"></i>
+                                        </a>
+                                    </div>
                                 </div>
 
-
                             </div>
+
+
+                            <div class="grid__column-6">
+                                <div class="brand-producer__brand">
+                                    <div class="brand-producer__brand">
+                                        <div class="brand-producer__brand-title">THƯƠNG HIỆU NỔI BẬT</div>
+                                        <a href="" class="brand-producer__brand-add">Xem Thêm
+                                            <i class="ti-angle-right"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+
 
                         </div>
 
