--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                     <ul class="navbar__right">
                         <li class="navbar__right--item navbar__right--item-show-notification">
                             <a href="" class="navbar__right--item-link">
-                                 <i class="ti-bell"></i> Thông Báo</a>
+                                 <i class="ti-bell navbar__right--item-link-icon"></i> Thông Báo</a>
+                                 <span class="navbar__notification-title">2</span>
                              <!--Header notification -Thông báo-->
                             <div class="navbar__notification">
                                 <header class="navbar__notification-header">
