--- a/index.html
+++ b/index.html
@@ -397,67 +397,67 @@
                         <div class="navbar__category--body">
                             
                             <div class="navbar__category--body-one">
-                                <div class="grid__column-1-10">
+                                <div class="l-1-10 m-1-10">
                                     <div class="navbar__category-men-fashion">
                                         <img src="/img/category/1/men-fashion.png" alt="" class="navbar__category-men-fashion-img">   
                                     </div>
                                 </div>
 
-                                <div class="grid__column-1-10">
+                                <div class="l-1-10 m-1-10">
                                     <div class="navbar__category-men-fashion">
                                         <img src="/img/category/1/men-fashion.png" alt="" class="navbar__category-men-fashion-img">   
                                     </div>
                                 </div>
 
-                                <div class="grid__column-1-10">
+                                <div class="l-1-10 m-1-10">
                                     <div class="navbar__category-men-fashion">
                                         <img src="/img/category/1/men-fashion.png" alt="" class="navbar__category-men-fashion-img">   
                                     </div>
                                 </div>
 
-                                <div class="grid__column-1-10">
+                                <div class="l-1-10 m-1-10">
                                     <div class="navbar__category-men-fashion">
                                         <img src="/img/category/1/men-fashion.png" alt="" class="navbar__category-men-fashion-img">   
                                     </div>
                                 </div>
 
-                                <div class="grid__column-1-10">
+                                <div class="l-1-10 m-1-10">
                                     <div class="navbar__category-men-fashion">
                                         <img src="/img/category/1/men-fashion.png" alt="" class="navbar__category-men-fashion-img">   
                                     </div>
                                 </div>
 
-                                <div class="grid__column-1-10">
+                                <div class="l-1-10 m-1-10">
                                     <div class="navbar__category-men-fashion">
                                         <img src="/img/category/1/men-fashion.png" alt="" class="navbar__category-men-fashion-img">   
                                     </div>
                                 </div>
 
-                                <div class="grid__column-1-10">
+                                <div class="l-1-10 m-1-10">
                                     <div class="navbar__category-men-fashion">
                                         <img src="/img/category/1/men-fashion.png" alt="" class="navbar__category-men-fashion-img">   
                                     </div>
                                 </div>
 
-                                <div class="grid__column-1-10">
+                                <div class="l-1-10 m-1-10">
                                     <div class="navbar__category-men-fashion">
                                         <img src="/img/category/1/men-fashion.png" alt="" class="navbar__category-men-fashion-img">   
                                     </div>
                                 </div>
 
-                                <div class="grid__column-1-10">
+                                <div class="l-1-10 m-1-10">
                                     <div class="navbar__category-men-fashion">
                                         <img src="/img/category/1/men-fashion.png" alt="" class="navbar__category-men-fashion-img">   
                                     </div>
                                 </div>
 
-                                <div class="grid__column-1-10">
+                                <div class="l-1-10 m-1-10">
                                     <div class="navbar__category-men-fashion">
                                         <img src="/img/category/1/men-fashion.png" alt="" class="navbar__category-men-fashion-img">   
                                     </div>
                                 </div>
 
-                                <div class="grid__column-1-10">
+                                <div class="l-1-10 m-1-10">
                                     <div class="navbar__category-men-fashion">
                                         <img src="/img/category/1/men-fashion.png" alt="" class="navbar__category-men-fashion-img">   
                                     </div>
