add modal input

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                             <div class="navbar__notification-info">
                                                 <span class="navbar__notification-name">Bạn ơi, hoàn xu</span>
                                                 <span class="navbar__notification-descriotion">
-                                                    Chiếc voucher. Số lượng có hạn dùng ngay bạn nhé!</span>
+                                                    Chiếc voucher. Số lượng có hạn dùng ngay bạn nhé! </span>
                                             </div>
                                         </a>
                                     </li>
@@ -535,7 +535,7 @@
         </div>
     </div>
 
-    <!--Modal -->
+    <!--Modal login -->
     <div class="modal js-modal-login" id="myModal">
         <div class="modal__overlay">
         </div>
@@ -585,6 +585,27 @@
                         <i class="ti-google"></i>
                         <span class="authecation-form__sicial-title">Google</span>
                     </a>
+                </div>
+
+            </div>
+            
+
+        </div>
+    </div>
+
+    <!--Modal input-->
+    <div class="modal modal--input js-modal-input" id="myModal">
+        <div class="modal__overlay modal__overlay--input js-modal-overlay-input">
+        </div>
+        <div class="modal__body modal__body--input">
+            <!-- input-->
+            <div class="modal--input-header js-modal-header-close">
+                <i class="ti-close modal--input-header-icon "></i>
+
+            </div>
+            <div class="modal--input-info">
+                <div class="modal--input-info-img" style="background-image: url('/img/Modal-input/modal-in.png');">
+                    
                 </div>
 
             </div>
